# spetlr-boot

./: .pre-commit-config.yaml  LICENSE  README.md  ruff.toml  setup.cfg  test_requirements.txt
.github/utilities/: manipulate_version.py
.github/workflows/: post-integration.yml  pre-integration.yml  release.yml
src/spetlrboot/: __init__.py  bootstrap.py  download.py  introspect_entrypoint.py  main.py
src/spetlrbootstrap/: __init__.py  arguments.py  bootstrap.py  download.py  libraries.py
tests/unit/: test_can_download.py  test_can_import.py
