[metadata]
name = spetlr-boot
author = Spetlr.Org
version = file: src/VERSION.txt
author_email = spetlr.org@gmail.com
description = Standalone job-start library for Databricks.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = databricks, pyspark, spetlr
url = https://github.com/spetlr-org/spetlr-boot
license_files = LICENSE
project_urls =
    Documentation = https://github.com/spetlr-org/spetlr-boot
    Bug Reports = https://github.com/spetlr-org/spetlr-boot/issues
    Source Code = https://github.com/spetlr-org/spetlr-boot
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.10


[options.packages.find]
where=src


[options.entry_points]
console_scripts =
    spetlrboot = spetlrboot.main:main


[flake8]
exclude = .git,__pycache__,docs,build,dist,venv
# ignore = E203, E266, E501, W503, F403, F401
ignore = E501, W503
max-line-length = 88
extend-ignore = E203
# max-complexity = 18
# select = B,C,E,F,W,T4,B9
